数据绑定，事件交互，列表循环，全局刷新，开始/结束刷新方法，底部菜单栏功能，新增服务，我的，分类页面

--- a/my_wechat_demo/pages/home/home.wxss
+++ b/my_wechat_demo/pages/home/home.wxss
@@ -1,1 +1,9 @@
 /* pages/home/home.wxss */
+.container_wrap {
+    text-align: center;
+    padding: 20rpx 30rpx;
+}
+
+.title {
+    display: block;
+}
