--- a/my_wechat_demo/pages/home/home.wxml
+++ b/my_wechat_demo/pages/home/home.wxml
@@ -7,12 +7,14 @@
 	<view wx:for="{{students}}" wx:key="index">姓名：{{item.name}} 年龄：{{item.age}}</view>
 	<button type="primary">事件绑定：</button>
 	<text>{{msg}} 计数值：{{count}}</text>
-	<button type="primary" bindtap="clickAddOne">+</button>
-	<button type="warn" bindtap="clickReduceOne">-</button>
+	<button type="primary" bindtap="clickAddOne">+
+	</button>
+	<button type="warn" bindtap="clickReduceOne">-
+	</button>
 	<button
 	 type="primary"
 	 bindtap="startRefresh"
-	 style="margin-bottom:30rpx;"
+	 style="margin:30rpx auto;"
 	>开始刷新
 	</button>
 	<button type="primary" bindtap="stopRefresh">结束刷新</button>
