--- a/my_wechat_demo/pages/home/home.wxml
+++ b/my_wechat_demo/pages/home/home.wxml
@@ -4,29 +4,63 @@
 <!-- 自定义wxs函数，wxs可以在页面直接调用 -->
 <wxs src="../../wxs/info.wxs" module="info"></wxs>
 <view class="container_wrap">
-    <text>pages/home/home.wxml</text>
-    <button type="primary">当前时间</button>
-    <button type="warn">{{currentTime}}</button>
-    <button type="primary">数据绑定</button>
-    <view>{{name}}</view>
-    <button type="primary">列表循环：</button>
-    <view wx:for="{{students}}" wx:key="index">姓名：{{item.name}} 年龄：{{item.age}}</view>
-    <button type="primary">事件绑定：</button>
-    <text>{{msg}} 计数值：{{count}}</text>
-    <button type="primary" bindtap="clickAddOne">+</button>
-    <button type="warn" bindtap="clickReduceOne">-</button>
-    <button type="primary" bindtap="startRefresh" style="margin:30rpx auto;">开始刷新</button>
-    <button type="primary" bindtap="stopRefresh">结束刷新</button>
-    <button type="primary" open-type="getUserInfo" bindgetuserinfo="handleGetUserInfos" style="margin:50rpx auto;">
-        获取用户权限信息二
-    </button>
-    <button type="primary">app.js全局属性</button>
-    <view>来自app.js全局属性：{{globalData.name}}</view>
-    <!-- 自定义模板 -->
-    <button type="primary">自定义模板</button>
-    <template is="msgItem" data="{{...item}}" />
-    <button type="primary">js保留两位小数{{ num }}</button>
-    <text>自定义wxs函数，wxs可以在页面直接调用</text>
-    <button type="warn">wxs中msg：{{info.msg}}</button>
-    <button type="primary">wxs中sum求和：{{info.sum(50, 60)}}</button>
+	<text>pages/home/home.wxml</text>
+	<button type="primary">当前时间</button>
+	<button type="warn">{{currentTime}}</button>
+	<button type="primary">数据绑定</button>
+	<view>{{name}}</view>
+	<button type="primary">列表循环：</button>
+	<view wx:for="{{students}}" wx:key="index">姓名：{{item.name}} 年龄：{{item.age}}</view>
+	<button type="primary">事件绑定：</button>
+	<text>{{msg}} 计数值：{{count}}</text>
+	<button type="primary" bindtap="clickAddOne">+</button>
+	<button type="warn" bindtap="clickReduceOne">-</button>
+	<button
+	 type="primary"
+	 bindtap="startRefresh"
+	 style="margin:30rpx auto;"
+	>开始刷新
+	</button>
+	<button type="primary" bindtap="stopRefresh">结束刷新</button>
+	<button
+	 type="primary"
+	 open-type="getUserInfo"
+	 bindgetuserinfo="handleGetUserInfos"
+	 style="margin:50rpx auto;"
+	>
+		获取用户权限信息二
+	</button>
+	<button type="primary">app.js全局属性</button>
+	<view>来自app.js全局属性：{{globalData.name}}</view>
+	<!-- 自定义模板 -->
+	<button type="primary">自定义模板</button>
+	<template is="msgItem" data="{{...item}}" />
+	<button type="primary">js保留两位小数{{ num }}</button>
+	<text>自定义wxs函数，wxs可以在页面直接调用, 解决页面不能用js函数问题</text>
+	<button type="warn">wxs中msg：{{info.msg}}</button>
+	<button type="primary">wxs中sum求和：{{info.sum(50, 60)}}</button>
+
+	<button>小程序常见事件</button>
+	<button
+	 type="primary"
+	 style="margin:30rpx auto;"
+	 data-str="{{'手指触摸动作开始'}}"
+	 bind:touchstart="hanldeTouchStart"
+	>手指触摸动作开始
+	</button>
+	<button
+	 type="primary"
+	 style="margin:30rpx auto;"
+	 data-str="{{name}}"
+	 bind:tap="hanldeTouchTap"
+	>手指触摸后马上离开
+	</button>
+	<button
+	 type="primary"
+	 style="margin:30rpx auto;"
+	 data-str="{{'手指触摸后，超过350ms再离开'}}"
+	 bind:longpress="hanldeLongPress"
+	>手指触摸后，超过350ms再离开
+	</button>
 </view>
+
