自定义组件，父组件向子组件传递样式和参数，子组件向父组件传递事件，父组件接收并显示

--- a/my_wechat_demo/components/my-component/my-component/index.wxml
+++ b/my_wechat_demo/components/my-component/my-component/index.wxml
@@ -1,7 +1,2 @@
-<view class="title">
-	{{title}}
-</view>
-<view class="content">
-	我是自定义组件的内容
-</view>
-
+<view class="title">{{title}}</view>
+<view class="content">{{content}}</view>
