--- a/my_wechat_demo/pages/home/home.wxss
+++ b/my_wechat_demo/pages/home/home.wxss
@@ -16,3 +16,16 @@
 .red {
     color: red;
 }
+
+.image_list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.img {
+    margin: 12rpx 12rpx;
+    width: 160rpx;
+    height: 160rpx;
+    border-radius: 12rpx;
+}
